feat: support filtered ecommerce diagnostics
